# pi-extender

./: .env.example  .gitignore  Cargo.toml  Rocket.toml
.github/workflows/: build.yml
deployment/: pi-extender.service  start.sh  upgrade.sh
src/: main.rs
src/util/: crypto_utils.rs  mod.rs  output_utils.rs  routes.rs  structs.rs  wireless_utils.rs
static/: manifest.json
static/scripts/: credential.js  main.js  status.js
static/styles/: credential.css  error.css  login.css  main.css  menu.css  status.css  wireless.css
templates/: credential.html.hbs  error.html.hbs  index.html.hbs  login.html.hbs  status.html.hbs  wireless.html.hbs
templates/includes/: pwa.hbs
